# stateless-rs

./: Cargo.toml  README.md  bacon.toml
examples/: onoff.rs  phonecall.rs
src/: builder.rs  lib.rs  state_config.rs  state_machine.rs  state_representation.rs  statemachine_error.rs  transition.rs  transition_event.rs  trigger_behaviour.rs
tests/: simple_on_off_tests.rs
